--- a/config/database.yml
+++ b/config/database.yml
@@ -49,6 +49,10 @@ test:
 #
 production:
   <<: *default
+  adapter: postgresql
+  encoding: unicode
+  pool: 5
+  
   database: sharemade_production
   username: sharemade
   password: <%= ENV['SHAREMADE_DATABASE_PASSWORD'] %>
