--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -20,5 +20,5 @@ test:
 # instead read values from the environment.
 production:
   secret_key_base: <%= ENV["SECRET_KEY_BASE"] %>
-  AWS_access_key_id: <%= ENV["AWS_ACCESS_KEY_ID"] %>
-  AWS_secret_id: <%= ENV["AWS_SECRET_ID"] %>
+  aws_access_key_id: <%= ENV["AWS_ACCESS_KEY_ID"] %>
+  aws_secret_key: <%= ENV["AWS_SECRET_KEY"] %>
